05SignUpForm/style.css
/* css Reset */
*, *::before, *::after {
    box-sizing: border-box;
  }
*{
    margin: 0;
    padding: 0;
    
}
body{
    /* add line height */
line-height: 1.5;
/* have no idea  */
-webkit-font-smoothing: antialiased;
}
img {
    display: block;
    max-width: 100%;
}
input, button, textarea, select {
    font: inherit;
}
/* text overflow stop */
p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
/* line wrapping improve  */
  p {
    text-wrap: pretty;
  }
  h1, h2, h3, h4, h5, h6 {
    text-wrap: balance;
  }

/* adding custom properties */
*{
   
   --background-color-container:#EEEEEE;
   --mobile-font-size:1.1rem;
   --mobile-paddding:1rem;
   --mobile-margin:1rem;
   --input-border:#e3e7e9;
   --main-color:#aa9d8d;
}
/* Mobile Layout design */
body{
    

    display: flex;
    justify-content: center;
    align-items: center;

    background-color: #fff;

    width: 100vw;
    min-height: 100vh;

}
.container{
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    justify-content: flex-start;
   

  
    background-color: #EEEEEE;
    border-radius: 10px;


     /* width: 100%; */
     /* max-width: 480px; */
     width: 100;
     height: 100%;

     padding:calc(var(--mobile-paddding)*2) var(--mobile-paddding);

}
.main-header,.input-container1,.input-container2,.input-container3{
  margin-bottom: var(--mobile-margin);
}
.side{
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  text-align: center;

  width: 100%;
  margin-bottom: var(--mobile-margin);

  

  .logo-title{
    font-size: 4rem;

     
  }
  .logo-image{
  

    
    width: 45px;
    height: 45px;
  }
}
.main-header{
  display: flex;
  flex-direction: column;
  align-items: center;

  h2{
    text-align: center;
    font-size: calc(var(--mobile-font-size)*1.4);
  }
  .header-details{
    display: none;
  }
}
.main-form{
  display: flex;
  flex-direction: column;
  align-items: center;

  width: 100%;
  ul{
    width: 100%;
    padding: 10px;
  }
  ul li{
    list-style-type: none;
    display: flex;
    flex-direction: column;
    
    .input-container1,.input-container2{
      display: flex;
      flex-direction: column;
      width: 100%;
    }
    input,button{
      border: 1px solid var(--input-border);
      border-radius: 10px;
      
      font-size: 1.3rem;
      padding: 5px 15px;
  }
  button{
    color: #fff;
    background-color: var(--main-color);

    width: 100%;

  }
  
  .button-container+p{
    margin: 12px 0;
    a{
      text-decoration: none;
      font-weight: bold;
      color: var(--main-color);
    }
  }
}
}

/* DeskTop Styles */

@media only screen and (min-width: 600px) {

  body{
    
    background-image: url(images/background.jpg);
  }
}

